# lab-registry-mcp

./: .env.example  .gitignore  GITHUB_RELEASE.md  README.md  TESTING.md  TODO.md  pyproject.toml
.copilot/agents/: mcp-dev.agent.md
.copilot/skills/python-mcp-patterns/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  mcp-tool-routing-tests.lock.yml  mcp-tool-routing-tests.md  release.yml
src/lab_registry/: models.py  registry.py  registry_github.py  server.py
src/lab_registry/tools/: compliance.py  fetch.py  search.py  stats.py  validate.py
tests/: conftest.py  mcp_triggers.json  test_contract.py  test_e2e.py  test_integration.py  test_nl_dispatch.py  test_registry.py  test_registry_github.py  test_tools_compliance.py  test_tools_fetch.py  test_tools_new.py  test_tools_reload.py  test_tools_search.py
tests/helpers/: mcp_nl_client.py
