[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lab-registry-server"
version = "0.3.0"
description = "MCP server exposing the Gen-e2 Lab Registry (skills, agents, commands, hooks)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
lab-registry = "lab_registry.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lab_registry"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "nl_dispatch: natural-language dispatch tests that require a local Ollama instance and REGISTRY_PATH",
]
